--- a/app/src/main/res/layout/fragment_cross_country.xml
+++ b/app/src/main/res/layout/fragment_cross_country.xml
@@ -17,7 +17,7 @@
             android:layout_height="90dp"
             android:minHeight="?attr/actionBarSize" />
 
-        <!-- Upcoming Games card -->
+        <!-- Upcoming Events card -->
         <android.support.v7.widget.CardView
             android:id="@+id/upcoming_events_card"
             android:layout_gravity="top"
@@ -47,7 +47,8 @@
 
                 </LinearLayout>
 
-                <include layout="@layout/card_divider" />
+                <include android:id="@+id/upcoming_events_header_divider"
+                    layout="@layout/card_divider" />
 
                 <ListView
                     android:id="@+id/upcoming_events_listview"
@@ -65,15 +66,25 @@
                     android:layout_gravity="center"
                     android:visibility="gone" />
 
+                <TextView
+                    android:id="@+id/upcoming_events_no_events_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/no_upcoming_events"/>
+
                 <LinearLayout
-                    android:id="@+id/upcoming_games_view_more_button_layout"
+                    android:id="@+id/upcoming_events_footer"
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:gravity="right|center_vertical"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/upcoming_games_view_more_button"
+                        android:id="@+id/upcoming_events_view_more_button"
                         style="@style/MaterialButtonFlat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -126,177 +137,11 @@
                         android:text="2014-2015 Season"/>
 
                     <TableLayout
+                        android:id="@+id/past_events_table_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp">
-
-                        <TableRow
-                            android:id="@+id/schedule_table_header"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:weightSum="1">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Overall" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Pct." />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Conf." />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Pct." />
-
-                        </TableRow>
-
-                        <TableRow
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="6dp"
-                            android:weightSum="1">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="4-3" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text=".571" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="0-0" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text=".000" />
-
-                        </TableRow>
-
-                        <TableRow
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:weightSum="1">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Streak" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Home" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Away" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.25"
-                                android:gravity="center"
-                                android:text="Neutral" />
-
-                        </TableRow>
-
-                        <TableRow
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="6dp"
-                            android:weightSum="1">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="Lost 1" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="1-1" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="2-2" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/primary_text_default_material_light"
-                                android:layout_weight="0.25"
-                                android:textSize="16sp"
-                                android:gravity="center"
-                                android:text="1-0" />
-
-                        </TableRow>
-
-
-                    </TableLayout>
-
-
-                    <TableLayout
-                        android:id="@+id/past_games_table_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:shrinkColumns="1"
+                        android:dividerPadding="3dp"
                         android:layout_marginTop="8dp">
 
 
@@ -333,14 +178,14 @@
                 <include layout="@layout/card_divider" />
 
                 <LinearLayout
-                    android:id="@+id/results_card_footer"
+                    android:id="@+id/past_events_card_footer"
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:gravity="right|center_vertical"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/past_games_view_more_button"
+                        android:id="@+id/past_events_view_more_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/MaterialButtonFlat"
