--- a/app/src/main/res/layout/fragment_sport.xml
+++ b/app/src/main/res/layout/fragment_sport.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:overScrollMode="never"
-    tools:context="com.techhab.collegeapp.BasketballFragment">
+    tools:context="com.techhab.collegeapp.StandardSportsFragment">
     <!--android:layout_marginTop="@dimen/abc_action_bar_default_height_material"-->
 
     <LinearLayout android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:minHeight="?attr/actionBarSize" />
 
         <!-- Game In Progress card -->
-        <android.support.v7.widget.CardView
+        <!--<android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/current_game"
             android:layout_gravity="top"
@@ -45,6 +45,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/in_progress_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
@@ -59,6 +60,7 @@
                         android:gravity="right|center_vertical">
 
                         <TextView
+                            android:id="@+id/in_progress_time_remaining"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center_vertical"
@@ -98,12 +100,14 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/in_progress_opponent_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/secondary_text_default_material_light"
                             android:text="Western Mich." />
 
                         <TextView
+                            android:id="@+id/in_progress_opponent_mascot"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="21sp"
@@ -120,6 +124,7 @@
                         android:gravity="right|center_vertical">
 
                         <TextView
+                            android:id="@+id/in_progress_opponent_score"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="32sp"
@@ -173,6 +178,7 @@
                         android:gravity="right|center_vertical">
 
                         <TextView
+                            android:id="@+id/in_progress_kzoo_score"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="32sp"
@@ -188,7 +194,7 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>-->
 
         <!-- Upcoming Games card -->
         <android.support.v7.widget.CardView
