--- a/app/src/main/res/layout/buildings_recycle.xml
+++ b/app/src/main/res/layout/buildings_recycle.xml
@@ -31,27 +31,25 @@
                 android:layout_gravity="top"
                 android:padding="16dp">
 
-
             </FrameLayout>
+            <LinearLayout
+                android:id="@+id/title_section"
+                android:layout_width="fill_parent"
+                android:layout_gravity="bottom"
+                android:layout_height="50dp"
+                android:background="#30000000"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/building_title"
+                    android:layout_marginLeft="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </LinearLayout>
         </FrameLayout>
-
-        <LinearLayout
-            android:id="@+id/title_section"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/kzooOrange"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/building_title"
-                android:layout_marginLeft="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="center_vertical"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
-        </LinearLayout>
 
         <TextView
             android:id="@+id/building_description"
