--- a/app/src/main/res/layout/food_wells_menu_item.xml
+++ b/app/src/main/res/layout/food_wells_menu_item.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:id="@+id/food_wells_menu_item_cvRoot"
+    android:focusable="true"
     style="@style/CardView">
 
     <LinearLayout
