--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -43,8 +43,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            android:gravity="center"
-            style="@android:style/Widget.ProgressBar.Small" />
+            android:gravity="center" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
