--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -12,6 +12,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--<com.techhab.kcollegecustomviews.ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="16dp"/>-->
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
@@ -30,6 +37,7 @@
                 <FrameLayout
                     android:id="@+id/toolbar_and_gender_switch"
                     android:layout_width="fill_parent"
+                    android:background="@color/green"
                     android:layout_height="wrap_content">
 
                     <android.support.v7.widget.Toolbar
@@ -38,6 +46,7 @@
                         android:layout_height="@dimen/abc_action_bar_default_height_material"
                         android:minHeight="@dimen/abc_action_bar_default_height_material"
                         app:theme="@style/Toolbar"
+                        android:background="@color/red"
                         app:popupTheme="@style/Theme.AppCompat.Light"
                         />
 
@@ -50,10 +59,11 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="10dp">
 
-                        <TextView
+                        <Button
+                            style="@style/MaterialButtonFlat"
                             android:id="@+id/men_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             android:text="@string/men"/>
@@ -62,16 +72,15 @@
                             android:id="@+id/gender_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="3dp"
-                            android:layout_marginLeft="3dp"
                             app:showText="false"/>
 
-                        <TextView
+                        <Button
+                            style="@style/MaterialButtonFlat"
                             android:id="@+id/women_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
+                            android:layout_height="35dp"
                             android:textColor="@color/white"
+                            android:textStyle="bold"
                             android:text="@string/women"/>
 
                         </LinearLayout>
