--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -37,7 +37,6 @@
                 <FrameLayout
                     android:id="@+id/toolbar_and_gender_switch"
                     android:layout_width="fill_parent"
-                    android:background="@color/green"
                     android:layout_height="wrap_content">
 
                     <android.support.v7.widget.Toolbar
@@ -46,7 +45,6 @@
                         android:layout_height="@dimen/abc_action_bar_default_height_material"
                         android:minHeight="@dimen/abc_action_bar_default_height_material"
                         app:theme="@style/Toolbar"
-                        android:background="@color/red"
                         app:popupTheme="@style/Theme.AppCompat.Light"
                         />
 
@@ -59,27 +57,33 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="10dp">
 
-                        <Button
-                            style="@style/MaterialButtonFlat"
+                        <TextView
                             android:id="@+id/men_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="35dp"
+                            android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:textStyle="bold"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:background="@drawable/athletic_gender_button_background"
                             android:text="@string/men"/>
 
                         <android.support.v7.widget.SwitchCompat
                             android:id="@+id/gender_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="3dp"
+                            android:layout_marginRight="3dp"
                             app:showText="false"/>
 
-                        <Button
-                            style="@style/MaterialButtonFlat"
+                        <TextView
                             android:id="@+id/women_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="35dp"
+                            android:layout_height="wrap_content"
                             android:textColor="@color/white"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:background="@drawable/athletic_gender_button_background"
                             android:textStyle="bold"
                             android:text="@string/women"/>
 
