--- a/app/src/main/res/layout/fragment_sport.xml
+++ b/app/src/main/res/layout/fragment_sport.xml
@@ -219,9 +219,10 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/upcoming_events_card_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/upcoming_games"
+                        android:text="@string/upcoming_events_default_text"
                         style="@style/CardTitle" />
 
                 </LinearLayout>
