--- a/app/src/main/res/layout/activity_campus.xml
+++ b/app/src/main/res/layout/activity_campus.xml
@@ -15,24 +15,52 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
-            <include layout="@layout/toolbar"/>
+            <!--<include layout="@layout/toolbar"/>-->
 
-            <com.techhab.collegeapp.PagerSlidingTabStrip
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/abc_action_bar_default_height_material"
+                android:minHeight="@dimen/abc_action_bar_default_height_material"
+                android:background="@color/main00"
+                app:theme="@style/Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light" >
+
+            </android.support.v7.widget.Toolbar>
+
+
+            <!--<com.techhab.collegeapp.PagerSlidingTabStrip
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
                 app:pstsPaddingMiddle="false"
                 android:fillViewport="true"
-                app:pstsShouldExpand="true"/>
+                app:pstsShouldExpand="true"/>-->
 
         </FrameLayout>
 
-        <android.support.v4.view.ViewPager
+        <!--<android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            tools:context=".AcademicActivity"/>
+            tools:context=".AcademicActivity"/>-->
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.techhab.collegeapp.CourseSearchFragment">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/campus_recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+
+        </FrameLayout>
 
     </LinearLayout>
 
