--- a/app/src/main/res/layout/fragment_richardson.xml
+++ b/app/src/main/res/layout/fragment_richardson.xml
@@ -50,7 +50,7 @@
                     android:layout_height="match_parent">
 
                     <ImageButton
-                        android:id="@+id/ibExpandable"
+                        android:id="@+id/status_bar_arrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@null"
@@ -61,7 +61,7 @@
                 </FrameLayout>
             </LinearLayout>
 
-            <TextView android:id="@+id/fragment_cafeteria_tvTimeDetail"
+            <TextView android:id="@+id/status_bar_extended_info"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:textSize="16dp"
