--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -1,20 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/main00"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="8dp"
+    app:style="@style/CardView"
+    android:animateLayoutChanges="true" >
 
-    <TextView
-        android:id="@+id/year"
-        android:layout_width="fill_parent"
-        android:layout_height="59dp"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        android:text="@string/academic_year_2014_15"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/main00"
-        android:background="@color/WhiteSmoke" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/term"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="16dp"
+            android:textSize="24sp"
+            android:textColor="@color/main00" />
+
+        <TableLayout
+            android:id="@+id/table_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <include layout="@layout/card_divider" />
+
+        <LinearLayout
+            android:id="@+id/calendar_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:gravity="end|center_vertical"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/calendar_view_more_button"
+                style="@style/MaterialButtonFlat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/kzooOrange"
+                android:text="@string/view_more"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
