--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -41,6 +41,9 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
             tools:context=".AcademicActivity"/>
 
     </LinearLayout>
