--- a/app/src/main/res/layout/buildings_recycle.xml
+++ b/app/src/main/res/layout/buildings_recycle.xml
@@ -4,12 +4,7 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
+    android:layout_margin="8dp"
     android:animateLayoutChanges="true"
     android:orientation="vertical"
     app:style="@style/CardView">
@@ -52,15 +47,25 @@
         </FrameLayout>
 
         <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="Hello world! this iashd iadnd naoenfgoaenrf sndfpogn aernf opneordn asdof"
+            android:textColor="@color/primary_text_default_material_light"
+            />
+
+
+        <TextView
             android:id="@+id/building_description"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#08000000"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:gravity="center_vertical"
-            android:padding="16dp"
             android:textColor="@color/primary_text_default_material_light"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:textSize="14sp" />
+
 
         <include
             android:id="@+id/divider"
@@ -69,13 +74,12 @@
         <LinearLayout
             android:id="@+id/button_section"
             android:layout_width="fill_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:gravity="end|center_vertical"
-            android:orientation="horizontal"
-            android:weightSum="6">
+            android:orientation="horizontal">
 
-            <ImageButton
+            <!--<ImageButton
                 android:id="@+id/mapit_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -83,7 +87,25 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/content_description"
                 android:gravity="right"
-                android:src="@drawable/ic_mapit" />
+                android:src="@drawable/ic_mapit" />-->
+
+            <Button
+                android:id="@+id/read_more_button"
+                style="@style/MaterialButtonFlat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text_default_material_light"
+                android:layout_marginRight="0dp"
+                android:text="@string/read_more"/>
+
+            <Button
+                android:id="@+id/mapit_button"
+                style="@style/MaterialButtonFlat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:textColor="@color/kzooOrange"
+                android:text="@string/map_it"/>
 
         </LinearLayout>
 
