--- a/app/src/main/res/layout/profile_listview_row.xml
+++ b/app/src/main/res/layout/profile_listview_row.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:padding="16dp"
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:textSize="@dimen/abc_text_size_title_material"
+        android:text="SAMPLE"
         android:textColor="@color/abc_primary_text_material_light" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This is a subtitle sample text"
+        android:textColor="@color/secondary_text_default_material_light"/>
+
+</LinearLayout>
