--- a/kcollegecustomviews/src/main/res/values/color.xml
+++ b/kcollegecustomviews/src/main/res/values/color.xml
@@ -10,6 +10,6 @@
     <color name="main11">#E24B26</color>
     <color name="main20">#E23E26</color>
     <color name="main21">#E23126</color>
-    <color name="main00_trans">#50E27226</color>
+    <color name="main_menu_trans">#50E27226</color>
 
 </resources>
